fixed blog wrap

--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -3,6 +3,7 @@
 
   &-item {
     display:flex;
+    flex-wrap: wrap;
     margin: $base-spacing;
   }
 
